--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
 @import "null";
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Raleway:wght@300;400;500&display=swap');
 @import "vendor";
+
+
 @import "global";
 @import "buttons";
 @import "header";
@@ -9,39 +11,6 @@
 @import "spollers";
 @import "popup";
 
-//preloader
-// #preloader {
-//     position: fixed;
-//     left: 0;
-//     top: 0;
-//     right: 0;
-//     bottom: 0;
-//     background: #000000;
-//     z-index: 30;
-//   }
-  
-//   .pre_wrapper small {
-//     display: block;
-//     position: relative;
-//     text-align: center;
-//     font-size: 25px;
-//     top: 100px;
-//   }
-  
-//   #preloader .icon_animate {
-//     position: absolute;
-//     width: 170px;
-//     height: 140px;
-//     background: url(../img/icons/logo_svg.svg) center center no-repeat; // Path to preloader icon
-//     background-size: 140px;
-//     /* centering begin */
-//     margin-left: auto;
-//     margin-right: auto;
-//     top: 50%;
-//     left: 50%;
-//     transform: translate(-50%, -50%);
-//     /* centering end */
-//   }
 //hero
 .hero {
     max-height: 800px;
@@ -166,7 +135,7 @@
 }
 //rewiews
 .slider__item {
-    max-height: 605px;
+    // max-height: 605px;
     height: 100%;
     margin: 0 20px;
     margin-bottom: 10px;
@@ -540,4 +509,6 @@
 .footer__link a{
     color: $color-red;
 }
+
+
 @import "mobile";
